--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -7,7 +7,7 @@
     <style name="Theme.MaintenanceRecords.Dark" parent="Theme.AppCompat.DayNight.NoActionBar">
         <!-- Customizations for dark mode -->
     </style>
-    <style name="Theme.MaintenanceRecords.Material" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.MaintenanceRecords.Material" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -19,6 +19,10 @@
         <!-- Status bar color -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
     </style>
-    <style name="Theme.MaintenanceRecords.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+    <style name="Theme.MaintenanceRecords.AppBarOverlay" parent="ThemeOverlay.MaterialComponents.Dark.ActionBar">
+        <item name="backgroundColor">@color/purple_500</item>
+        <item name="android:textColorPrimary">@color/white</item>
+        <item name="titleTextColor">@color/white</item>
+    </style>
     <style name="Theme.MaintenanceRecords.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
