--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,8 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            app:menu="@menu/main_menu" />
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/App.PopupMenu" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
